--- a/TaskManager/Views/_ViewImports.cshtml
+++ b/TaskManager/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using TaskManager
 @using TaskManager.Models
+@using Kendo.Mvc.UI
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Kendo.Mvc
