--- a/TaskManagerApp/Views/Status/Index.cshtml
+++ b/TaskManagerApp/Views/Status/Index.cshtml
@@ -2,18 +2,18 @@
 @using TaskManagerApp.Models.ViewModels
 @using TaskManagerApp.ApiHelpers
 @{
-    ViewData["Title"] = SpanishTitle.Store;
+    ViewData["Title"] = SpanishTitle.Status;
 }
 
-<h1>@SpanishTitle.Store</h1>
+<h1>@SpanishTitle.Status</h1>
 
-@(Html.Kendo().Grid<StoreViewModel>
+@(Html.Kendo().Grid<StatusViewModel>
     ()
     .Name("Stores")
     .Columns(columns =>
     {
-        columns.Bound(c => c.StoreId).Hidden();
-        columns.Bound(c => c.Name).Width(350);
+        columns.Bound(c => c.StatusId).Hidden();
+        columns.Bound(c => c.Description).Width(350);
         //columns.Command(command => command.Destroy().Text("Eliminar")).Width(90);
     })
     .ToolBar(toolbar =>
@@ -80,17 +80,17 @@
         .PageSize(20)
         .ServerOperation(false)
         .Events(events => events.RequestEnd("onRequestEnd"))
-        .Model(model => model.Id(p => p.StoreId))
-        .Sort(s => s.Add("Name").Ascending())
-        .Read(read => read.Action("GetAll", "Store"))
-    .Create(create => create.Action("BatchCreate", "Store"))
-    .Update(update => update.Action("BatchUpdate", "Store"))
+        .Model(model => model.Id(p => p.StatusId))
+        .Sort(s => s.Add("Description").Ascending())
+        .Read(read => read.Action("GetAll", "Status"))
+    .Create(create => create.Action("BatchCreate", "Status"))
+    .Update(update => update.Action("BatchUpdate", "Status"))
     //.Destroy(delete => delete.Action("BatchDelete", "Category"))
     ))
 
 
 <script>
     function onRequestEnd(e) {
-        redirectToIndex(e, "@ApiControllerName.Store");
+        redirectToIndex(e, "@ApiControllerName.Status");
     }
 </script>
