--- a/TaskManagerApp/Views/Assignment/Index.cshtml
+++ b/TaskManagerApp/Views/Assignment/Index.cshtml
@@ -17,7 +17,7 @@
         <br />
         <br />
     </div>
-    @*@await Html.PartialAsync("CreatePartial")*@
+    @await Html.PartialAsync("CreatePartial")
     <div>
         @(Html.Kendo().Grid<AssignmentViewModel>()
             .Name("Assignments")
