--- a/TaskManagerApp/Views/Store/Index.cshtml
+++ b/TaskManagerApp/Views/Store/Index.cshtml
@@ -91,6 +91,6 @@
 
 <script>
     function onRequestEnd(e) {
-        redirectToIndex(e, "@ApiControllerName.Store");
+        redirectToIndex(e, 'Stores');
     }
 </script>
