--- a/TaskManagerApp/Views/Assignment/CreatePartial.cshtml
+++ b/TaskManagerApp/Views/Assignment/CreatePartial.cshtml
@@ -3,8 +3,6 @@
 <div class="modal fade" id="myModalAssignment" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            @using (Html.BeginForm("Upsert", "Assignment", FormMethod.Post, new { enctype = "multipart/form-data" }))
-            {
                 <div class="modal-header">
                     <h4 class="modal-title" id="myModalLabel">Crear - Editar</h4>
                 </div>
@@ -47,10 +45,9 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <input type="submit" value="Guardar" class="btn btn-primary" id="btnUpsert" onclick="return validate();" />
+                    <input type="button" value="Guardar" class="btn btn-primary" id="btnUpsert" onclick="return createAssignment();" />
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                 </div>
-            }
         </div>
     </div>
 </div>
