--- a/TaskManagerApp/Views/Assignment/CreatePartial.cshtml
+++ b/TaskManagerApp/Views/Assignment/CreatePartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model TaskManagerApp.Models.ViewModels.AssignmentRequest
+﻿@model             TaskManagerApp.Models.Requests.AssignmentRequest
 
 <div class="modal fade" id="myModalAssignment" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
