--- a/TaskManagerApp/wwwroot/css/generic.css
+++ b/TaskManagerApp/wwwroot/css/generic.css
@@ -32,7 +32,7 @@
     width: 32px;
 }
 
-.product-name {
+.status-description {
     display: inline-block;
     line-height: 32px;
     padding-left: 3px;
