--- a/TaskManagerApp/Views/Assignment/CreatePartial.cshtml
+++ b/TaskManagerApp/Views/Assignment/CreatePartial.cshtml
@@ -18,7 +18,7 @@
                         <div class="input-group mb-2 mr-sm-2">
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1">
-                                    <i class="fas fa-box"
+                                    <i class="fas fa-building"
                                        aria-hidden="true">
                                     </i>
                                 </span>
@@ -34,7 +34,7 @@
                         <div class="input-group mb-2 mr-sm-2">
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon1">
-                                    <i class="fas fa-pen-alt"
+                                    <i class="fas fa-pencil-alt"
                                        aria-hidden="true">
                                     </i>
                                 </span>
