--- a/TaskManagerApp/Views/Schedule/CreatePartial.cshtml
+++ b/TaskManagerApp/Views/Schedule/CreatePartial.cshtml
@@ -18,7 +18,7 @@
                     <div class="input-group mb-2 mr-sm-2">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon1">
-                                <i class="fas fa-box"
+                                <i class="far fa-calendar-alt"
                                    aria-hidden="true">
                                 </i>
                             </span>
@@ -48,7 +48,7 @@
                     <div class="input-group mb-2 mr-sm-2">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon1">
-                                <i class="fas fa-box"
+                                <i class="far fa-calendar-check"
                                    aria-hidden="true">
                                 </i>
                             </span>
@@ -64,7 +64,7 @@
                     <div class="input-group mb-2 mr-sm-2">
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon1">
-                                <i class="fas fa-pen-alt"
+                                <i class="far fa-file-alt"
                                    aria-hidden="true">
                                 </i>
                             </span>
