--- a/TaskManagerApp/Views/Assignment/Index.cshtml
+++ b/TaskManagerApp/Views/Assignment/Index.cshtml
@@ -98,11 +98,11 @@
                 .Ajax()
                 .PageSize(20)
                 .ServerOperation(false)
-                .Sort(s => s.Add("StatusDescription").Ascending())
+                .Sort(s => s.Add("StatusDescription").Descending())
                 .Model(model => model.Id(p => p.AssignmentId))
                 .Read(read => read.Action("GetAll", "Assignment"))
-            .Group(group => group.Add("StatusDescription", typeof(string), ListSortDirection.Ascending))
-            //.Group(group => group.Add("StoreName", typeof(string), ListSortDirection.Ascending))
+            .Group(group => group.Add("StatusDescription", typeof(string), ListSortDirection.Descending))
+            .Group(group => group.Add("StoreName", typeof(string), ListSortDirection.Ascending))
             ))
     </div>
 </div>
