--- a/TaskManagerApp/Views/Schedule/Index.cshtml
+++ b/TaskManagerApp/Views/Schedule/Index.cshtml
@@ -102,7 +102,7 @@
                 .Sort(s => s.Add("StatusDescription").Descending())
                 .Model(model => model.Id(p => p.ScheduleId))
                 .Read(read => read.Action("GetAll", "Schedule"))
-            .Group(group => group.Add("StatusDescription", typeof(string), ListSortDirection.Ascending))
+            .Group(group => group.Add("StatusDescription", typeof(string), ListSortDirection.Descending))
             .Group(group => group.Add("Date", typeof(string), ListSortDirection.Ascending))
             .Group(group => group.Add("StoreName", typeof(string), ListSortDirection.Ascending))
             ))
