--- a/TaskManagerApp/Views/Assignment/Index.cshtml
+++ b/TaskManagerApp/Views/Assignment/Index.cshtml
@@ -25,7 +25,7 @@
             {
                 columns.Bound(c => c.AssignmentId).Hidden();
                 columns.Bound(c => c.Description).Width(200).Groupable(false);
-                columns.Bound(c => c.StoreName).Width(100)
+                columns.Bound(c => c.Used).Width(100)
                     .Filterable(ftb => ftb
                         .Multi(true)
                         .CheckAll(false)
