--- a/TaskManagerApp/Views/Assignment/CreatePartial.cshtml
+++ b/TaskManagerApp/Views/Assignment/CreatePartial.cshtml
@@ -45,8 +45,18 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <input type="button" value="Guardar" class="btn btn-primary" id="btnUpsert" onclick="return createAssignment();" />
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary" id="btnUpsert" onclick="return createAssignment();">
+                        <i class="fas fa-save"
+                           aria-hidden="true">
+                        </i>
+                        Guardar
+                    </button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">
+                        <i class="fas fa-times"
+                           aria-hidden="true">
+                        </i>
+                        Cerrar
+                    </button>
                 </div>
         </div>
     </div>
