--- a/TaskManagerApp/Views/Schedule/Index.cshtml
+++ b/TaskManagerApp/Views/Schedule/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Kendo.Mvc
+@using TaskManagerApp.ApiHelpers
 @using TaskManagerApp.Models
 @using TaskManagerApp.Models.ViewModels
 @{
@@ -24,15 +25,15 @@
             .Columns(columns =>
             {
                 columns.Bound(c => c.ScheduleId).Hidden();
-                columns.Bound(c => c.AssignmentDescription).Width(220).Groupable(false);
-                columns.Bound(c => c.StoreName).Width(150)
+                columns.Bound(c => c.AssignmentDescription).Width(150).Groupable(false);
+                columns.Bound(c => c.StoreName).Width(100)
                     .Filterable(ftb => ftb
                         .Multi(true)
                         .CheckAll(false)
                         .Messages(msg => msg
                             .SelectedItemsFormat("{0} opciones seleccionadas"))
                     );
-                columns.Bound(c => c.StatusDescription).Width(100)
+                columns.Bound(c => c.StatusDescription).Width(90)
                     .Filterable(ftb => ftb
                         .Multi(true)
                         .CheckAll(false)
@@ -43,7 +44,14 @@
                     .Width(150);
                 columns.Bound(c => c.Date).Width(90).Format("{0:dd/MM/yyyy}");
                 columns.Bound(c => c.Note).Width(100).Groupable(false);
-                columns.Command(command => command.Custom("Editar").HtmlAttributes(new Dictionary<string, object> {["class"] = "editButton"})).Width(80);
+                columns.Command(command =>
+                {
+                    command.Custom("Editar").HtmlAttributes(new Dictionary<string, object> {["class"] = "editButton"});
+                    command.Custom("btnDelete")
+                        .Visible("cancelVisible")
+                        .Text("Cancelar")
+                        .Click("showRecordToDelete");
+                }).Width(150);
             })
             .Resizable(c => c.Columns(true))
             .Pageable(pageable => pageable
@@ -109,5 +117,31 @@
             ))
     </div>
 </div>
+@await Html.PartialAsync("DeletePartial")
+
+<script>
+    function showRecordToDelete(e) {
+        e.preventDefault();
+
+        var dataItem = this.dataItem(window.$(e.currentTarget).closest("tr"));
+
+        window.$("#lblRecordId").html(dataItem.ScheduleId);
+
+        window.$("#lblCancelMessage").removeAttr("hidden");
+
+        window.$("#btnDeleteSchedule").removeAttr("hidden");
+
+        window.$("#myModalDelete").modal();
+    }
+
+    window.$("#btnDeleteSchedule").on("click",
+        function () {
+            deleteRecord("@ApiControllerName.Schedule", "Schedules");
+        });
+
+    function cancelVisible(dataItem) {
+        return dataItem.StatusDescription != "Finalizada";
+    }
+</script>
 
 <script src="~/js/schedule.js"></script>
