--- a/TaskManagerApp/Views/Shared/DeletePartial.cshtml
+++ b/TaskManagerApp/Views/Shared/DeletePartial.cshtml
@@ -13,11 +13,37 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <input type="button" value="De acuerdo" class="btn btn-primary" id="btnDeleteStore" hidden/>
-                <input type="button" value="De acuerdo" class="btn btn-primary" id="btnDeleteStatus" hidden/>
-                <input type="button" value="De acuerdo" class="btn btn-primary" id="btnDeleteAssignment" hidden/>
-                <input type="button" value="De acuerdo" class="btn btn-primary" id="btnDeleteSchedule" hidden/>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary" id="btnDeleteStore" hidden>
+                    <i class="fas fa-plus"
+                       aria-hidden="true">
+                    </i>
+                    De acuerdo
+                </button>
+                <button type="button" class="btn btn-primary" id="btnDeleteStatus" hidden>
+                    <i class="fas fa-check"
+                       aria-hidden="true">
+                    </i>
+                    De acuerdo
+                </button>
+
+                <button type="button" class="btn btn-primary" id="btnDeleteAssignment" hidden>
+                    <i class="fas fa-check"
+                       aria-hidden="true">
+                    </i>
+                    De acuerdo
+                </button>
+                <button type="button" class="btn btn-primary" id="btnDeleteSchedule" hidden>
+                    <i class="fas fa-check"
+                       aria-hidden="true">
+                    </i>
+                    De acuerdo
+                </button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">
+                    <i class="fas fa-times"
+                       aria-hidden="true">
+                    </i>
+                    Cancelar
+                </button>
             </div>
         </div>
     </div>
