--- a/TaskManagerApp/wwwroot/css/generic.css
+++ b/TaskManagerApp/wwwroot/css/generic.css
@@ -55,3 +55,15 @@
 .editButton {
     color: black !important;
 }
+
+/*.k-datepicker .k-picker-wrap, .k-datetimepicker .k-picker-wrap, .k-timepicker .k-picker-wrapt {
+    border-color: red !important;
+}*/
+
+/*.k-picker-wrap {
+    border-color: red !important;
+}*/
+
+.fieldRequired {
+    border-color: red;
+}
