--- a/TaskManagerApp/Views/Schedule/CreatePartial.cshtml
+++ b/TaskManagerApp/Views/Schedule/CreatePartial.cshtml
@@ -7,13 +7,13 @@
                 <h4 class="modal-title" id="myModalLabel">Crear - Editar</h4>
             </div>
             <div class="requiredFields">
-                @Html.Label("", "Campos con (*) son obligatorios.", new {@class = "text-danger"})
+                @Html.Label("", "Campos con (*) son obligatorios.", new { @class = "text-danger" })
             </div>
-            @Html.TextBoxFor(model => model.ScheduleId, new {@class = "form-control", Id = "txtScheduleId", hidden = true})
+            @Html.TextBoxFor(model => model.ScheduleId, new { @class = "form-control", Id = "txtScheduleId", hidden = true })
             <div class="modal-body">
                 <div class="form-group">
                     <div class="fieldNameAlign">
-                        @Html.LabelFor(model => model.AssignmentId) @Html.Label("", "*", new {@class = "text-danger"})
+                        @Html.LabelFor(model => model.AssignmentId) @Html.Label("", "*", new { @class = "text-danger" })
                     </div>
                     <div class="input-group mb-2 mr-sm-2">
                         <div class="input-group-prepend">
@@ -23,27 +23,42 @@
                                 </i>
                             </span>
                         </div>
-                        @Html.DropDownListFor(model => model.AssignmentId, new SelectList(ViewBag.Assignments, "ItemId", "Description"), "Elija una opción", new {@class = "form-control", Id = "cbxAssignments", onchange = "removeErrorMessage('cbxAssignments','lblAssignmentsError')"})
+                        @Html.DropDownListFor(model => model.AssignmentId,
+                            new SelectList(ViewBag.Assignments, "ItemId", "Description"),
+                            "Elija una opción",
+                            new
+                            {
+                                @class = "form-control",
+                                Id = "cbxAssignments",
+                                onchange = "removeErrorMessage('cbxAssignments','lblAssignmentsError')",
+                                style = "width: 90%",
+                            })
+                        <span id="lblAssignmentsError" class="text-danger"></span>
                     </div>
-                    <span id="lblAssignmentsError" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <div class="fieldNameAlign">
-                        @Html.LabelFor(model => model.Date) @Html.Label("", "*", new {@class = "text-danger"})
+                        @Html.LabelFor(model => model.Date) @Html.Label("", "*", new { @class = "text-danger" })
                     </div>
                     <div class="input-group mb-2 mr-sm-2">
                         @(Html.Kendo().DatePicker()
                             .Name("dtpDate")
                             .Format("dd/MM/yyyy")
                             .WeekNumber()
-                            .HtmlAttributes(new {Id = "dtpDate", style = "width: 100%", onchange = "removeErrorMessage('dtpDate','lblDateError')"})
+                            .HtmlAttributes(new
+                            {
+                                Id = "dtpDate",
+                                onchange = "removeErrorMessage('dtpDate','lblDateError')",
+                                style = "width: 100%",
+                                //placeholder = "DD/MM/YY",
+                            })
                             )
+                        <span id="lblDateError" class="text-danger"></span>
                     </div>
-                    <span id="lblDateError" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <div class="fieldNameAlign">
-                        @Html.LabelFor(model => model.StatusId) @Html.Label("", "*", new {@class = "text-danger"})
+                        @Html.LabelFor(model => model.StatusId) @Html.Label("", "*", new { @class = "text-danger" })
                     </div>
                     <div class="input-group mb-2 mr-sm-2">
                         <div class="input-group-prepend">
@@ -53,9 +68,19 @@
                                 </i>
                             </span>
                         </div>
-                        @Html.DropDownListFor(model => model.StatusId, new SelectList(ViewBag.Statuses, "ItemId", "Description"), "Elija una opción", new {@class = "form-control", Id = "cbxStatuses", onchange = "removeErrorMessage('cbxStatuses','lblStatusesError')"})
+                        @Html.DropDownListFor(
+                            model => model.StatusId,
+                            new SelectList(ViewBag.Statuses, "ItemId", "Description"),
+                            "Elija una opción",
+                            new
+                            {
+                                @class = "form-control",
+                                Id = "cbxStatuses",
+                                onchange = "removeErrorMessage('cbxStatuses','lblStatusesError')",
+                                style = "width: 90%",
+                            })
+                        <span id="lblStatusesError" class="text-danger"></span>
                     </div>
-                    <span id="lblStatusesError" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <div class="fieldNameAlign">
@@ -69,7 +94,7 @@
                                 </i>
                             </span>
                         </div>
-                        @Html.TextBoxFor(model => model.Note, new {@class = "form-control", Id = "txtNote"})
+                        @Html.TextBoxFor(model => model.Note, new { @class = "form-control", Id = "txtNote" })
                     </div>
                 </div>
             </div>
