--- a/TaskManagerApp/Views/Shared/DeletePartial.cshtml
+++ b/TaskManagerApp/Views/Shared/DeletePartial.cshtml
@@ -14,7 +14,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" id="btnDeleteStore" hidden>
-                    <i class="fas fa-plus"
+                    <i class="fas fa-check"
                        aria-hidden="true">
                     </i>
                     De acuerdo
