--- a/TaskManagerApp/Views/Shared/_Layout.cshtml
+++ b/TaskManagerApp/Views/Shared/_Layout.cshtml
@@ -74,6 +74,13 @@
     </environment>
 
     <script src="~/js/generic.js"></script>
+    @*<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>*@
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/jquery.inputmask.bundle.js"></script>
+
+
+    <script>
+        $("#DtpDate").inputmask({ "mask": "(999) 999-9999" });
+    </script>
     @await RenderSectionAsync("scripts", false)
 </body>
 </html>
